Name: delay
Build-Type: Simple
Description: An audio file delay line.
Version: 0.1
License: BSD3
License-File: COPYING
Copyright: Copyright (C) 2008 Bart Massey
Author: Bart Massey <bart@cs.pdx.edu>
Maintainer: Bart Massey <bart@cs.pdx.edu>
Homepage: http://wiki.cs.pdx.edu/bartforge/truelevel
Stability: Alpha
Synopsis: Audio delay line
Category: Sound
Build-Depends: base, WAVE, parseargs
Extra-Source-Files: README

Executable: delay
Main-Is: delay.hs
